--- a/style.css
+++ b/style.css
@@ -2,54 +2,28 @@ html, body {
   height: 100%;
   width: 100%;
 }
-#box {
-  width: 70%;
-  height: 50px;
-  background-color: red;
+footer{ 
+  width: 100%;
+  color: #cd8d0e;
+  background-color: #f5c670;
+  font-family: Verdana;
+  height: 60px;
+  text-align: center;
+  position: fixed;
+   bottom: 0;
+  
+}
+nav{ 
+  background-color: #f5c670;
+  float: left;
 }
 
-#box1 {
-  width: 70%;
-  height: 100px;
-  background-color: yellow;
-}
-
-#box2 {
-  width: 70%;
-  height: 50px;
-  background-color: blue;
-}
-
-#box3 {
-  width: 400px;
-  height: 200px;
-  background-color: orange;
-  margin-left: 50px;
-  margin-top: 100px;
-}
-
-#imagePlace {
-    height: 490px;
-    width: 350px;
-    margin-top: 100px;
-    margin-left: 100px;
-    border: 5px dashed red;
-    background-image: url("./PAT.png");
-    background-size: cover;
-    background-position: center;
-}
-
-#SP {
-    width: 200px;
-    height: 200px;
-    border: 1px blue solid;
-    padding: 0px;
-}
-
-#SP2 {
-    width: 200px;
-    height: 200px;
-    border: 1px blue solid;
-    padding: 20px;
-    margin-top: 10px;
+  header{
+  background-color: #009999;
+width: 100%;
+  height: 150px;
+  color: white;
+  font-family: Verdana;
+  text-align: center;
+  font-size: 32px;
 }
