--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ html, body, #app {
   background-color: var(--main-bg);
 }
 
+* {
+  transition: color 2s ease-in-out;
+  transition: background-color 2s ease-in-out;
+}
+
 nav {
   width: 100%;
   height: 8%;
@@ -21,6 +26,95 @@ nav {
   font-size: 2rem;
   float: right;
   user-select: none;
+  transition: all 0.5s ease-in-out;
 }
 /* Remove Border ON Click */
 .themechanger:focus { outline: none; border: none; }
+
+.themechanger:hover {
+  background-color: var(--main-hover);
+}
+
+
+/* GOTY Text / Link */
+#cdt {
+  background-color: transparent;
+  width: auto;
+  height: 100%;
+  font-size: 2rem;
+  float: center;
+  user-select: none;
+  color: var(--main-text);
+  text-decoration: none;
+  vertical-align: baseline;
+  line-height: 180%;
+  margin-left: 0.5%;
+  transition: all 2s ease-in-out;
+  font-weight: bold;
+}
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+  color: var(--main-text);
+}
+
+.hover-underline-animation::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 15%;
+  left: 0;
+  background-color: var(--main-text);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+/* DROP DOWN MENU HERE */
+.dropbtn {
+  background-color: transparent;
+  border: 1rem solid var(--main-text);
+  color: var(--main-text);
+  font-weight: bold;
+  font-size: 2rem;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--main-dd);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  background-color: transparent;
+  color: var(--main-text);
+  font-weight: bold;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  transition: background-color 0.25s ease-in-out;
+}
+
+.dropdown-content a:hover {
+  background-color: var(--main-hover);
+}
+
+.dropdown-content a:hover {background-color: var(--main-hover);}
+
+.dropdown:hover .dropdown-content {display: block;}
