--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ html, body, #app {
   background-color: var(--main-bg);
 }
 
+image {
+  border: none;
+}
+
 * {
   transition: color 2s ease-in-out;
   transition: background-color 2s ease-in-out;
@@ -14,9 +18,10 @@ html, body, #app {
 nav {
   width: 100%;
   height: 8%;
-  position: sticky;
+  position: fixed;
   left: 0;
   background-color: var(--main-nav);
+  z-index: 255;
 }
 
 .themechanger {
@@ -126,3 +131,30 @@ nav {
 .dropdown-content a:hover {background-color: var(--main-hover);}
 
 .dropdown:hover .dropdown-content {display: block;}
+
+
+.rotate {
+  -webkit-transform:rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.embed {
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  left: 10%;
+  top: 10%;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: var(--main-nav);
+  color: var(--main-text);
+  text-align: center;
+}
