--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ nav {
 #split {
   width: 0.5%;
   height: 100%;
-  background-color: white;
+  background-color: var(--main-bg);
   float: left;
 }
 
