--- a/css/style.css
+++ b/css/style.css
@@ -157,4 +157,39 @@ nav {
   background-color: var(--main-nav);
   color: var(--main-text);
   text-align: center;
+  height: 6%;
+}
+
+.root {
+  position: absolute;
+  top: 8%;
+  width: 100%;
+  height: 88%;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  background-color: var(--main-bg);
+  color: var(--main-text);
+}
+
+.aboutGOTY {
+  width: 60%;
+  height: 82%;
+  color: var(--main-text);
+  background-color: transparent;
+  border: 1px white solid;
+  position: absolute;
+  top: 12%;
+}
+
+.gridphotos {
+  display: grid;
+  grid-auto-flow: column;  
+}
+.gridphotos img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin: 0;
+  padding: 0;
 }
